añadido título y parrafo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Repositorio Git</title>
 </head>
 <body>
- Otro Cambio  
+<h1>Repositorio Git Demo</h1> 
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima laborum dignissimos quia aut, veritatis officia provident est eaque reiciendis voluptates! Debitis aspernatur libero, numquam accusamus quis earum eius harum excepturi.</p>
 </body>
 </html>
